[gd_scene load_steps=5 format=3 uid="uid://wfk2vnuru8d"]

[ext_resource type="Script" uid="uid://co20lkiwh4nsp" path="res://addons/scene_palette/components/favorite_button/FavoriteButton.gd" id="1_vdv7t"]
[ext_resource type="Script" uid="uid://b3o6koenfojuc" path="res://addons/scene_palette/components/favorite_button/Button.gd" id="2_8ifhe"]
[ext_resource type="Texture2D" uid="uid://bwix4q3rurii3" path="res://addons/scene_palette/icons/palette.png" id="2_hpqcp"]
[ext_resource type="Texture2D" uid="uid://e4xx0y6gp4mu" path="res://addons/scene_palette/icons/eye_dropper.png" id="4_0krmm"]

[node name="FavoriteButton" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 0
theme_override_constants/separation = 0
script = ExtResource("1_vdv7t")

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 14
text = "text"
icon = ExtResource("2_hpqcp")
script = ExtResource("2_8ifhe")

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/separation = -1

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "change color"
icon = ExtResource("4_0krmm")
edit_alpha = false

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/ColorPickerButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -6.0
offset_right = 5.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_0krmm")
stretch_mode = 2

[node name="DeleteButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "Remove from favorites."
text = " x "

[connection signal="mouse_entered" from="Button" to="Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_favorite_button_pressed"]
[connection signal="color_changed" from="VBoxContainer/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="pressed" from="VBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
